...
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"></LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/editBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/editbuttonstyle"
                android:text="Edit Profile"
                android:textColor="#fff" />

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
...
